samples/_failures_safe/1761328665_9ab7c5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_59e08229.c: In function ‘main’:
./samples/SAFE/__tmp_59e08229.c:156:17: error: expected ‘;’ at end of input
  156 |         return 1
      |                 ^
      |                 ;
./samples/SAFE/__tmp_59e08229.c:156:9: error: expected declaration or statement at end of input
  156 |         return 1
      |         ^~~~~~
./samples/SAFE/__tmp_59e08229.c:156:9: error: expected declaration or statement at end of input
